@@ -952,3 +952,7 @@
 2012-01-26  ChanWook Jung (jchanwook@gmail.com)
 
         * Expand elm_transit tween_mode and add twee_mode_factor_set(),get() APIs
+
+2012-01-26  WooHyun Jung
+
+        * A widget which doesn't have focus_region_get should give its width and height for correct focus_region_show.
